style(screensaver): adjust massive clock font size to prevent screen overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1504,7 +1504,7 @@ body.osk-open .main-stage {
 }
 
 #clock-time.massive {
-    font-size: 480px;
+    font-size: 350px;
 }
 
 .clock-main-digits {
